Fix vertical alignment & two tiny issues

--- a/projects/plugins/jetpack/_inc/client/my-plan/my-plan-card/style.scss
+++ b/projects/plugins/jetpack/_inc/client/my-plan/my-plan-card/style.scss
@@ -20,6 +20,7 @@
 
 .my-plan-card__header {
 	flex: 1;
+  	margin: auto;
 }
 
 .is-plan .my-plan-card__title{
